[project]
name = "soda-update-version"
version = "2025.11.7.0"
description = "update version using datetime format for python projects"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "tomli>=2.3.0",
    "twine>=6.1.0",
]


[project.urls]
Repository = "https://github.com/soda92/update-version"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
ignore-vcs = true
packages = ["soda_update_version"]
exclude = [
    "__pycache__",
    "*.pyc",
    "compile*.json",
    ".cache",
    "build",
    "*.syso",
    "*.exe~",
    "*.ico~",
    "*.pdb",
    "*.sqlite3",
]

[tool.hatch.build.targets.wheel]
ignore-vcs = true
packages = ["soda_update_version"]
# exclude is not needed because wheel is build from sdist in uv

[project.scripts]
update_version = "soda_update_version.main:main"
